--- a/01-intro/01-hello-world/solution.html
+++ b/01-intro/01-hello-world/solution.html
@@ -1,1 +1,11 @@
 <!-- Напишите решение сюда -->
+<!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Вводная задача</title>
+    </head>
+    <body>
+        <p>Hello world</p>
+    </body>
+</html>
