--- a/02-dz0/01-semantic-mockup/solution.html
+++ b/02-dz0/01-semantic-mockup/solution.html
@@ -1,4 +1,52 @@
 <!DOCTYPE html>
 <html lang="ru">
     <!-- Ваше решение -->
+    <head>
+        <meta charset="utf-8">
+        <title>Семантическая разметка страницы</title>
+        <style>
+            header, main, footer {
+                font-family: Georgia, serif;
+            }
+
+            body {
+                background-color: black;
+            }
+        </style>
+    </head>
+    <body>
+        <header style="text-align: center; background-color: #32CD32;">
+            <h1>Заголовок страницы</h1>
+            <nav style="background-color: rgb(226, 20, 20);">
+                <p><a href="">Страница 1</a></p>
+                <p><a href="">Страница 2</a></p>
+                <p><a href="">Страница 3</a></p>
+            </nav>
+        </header>
+
+        <main>
+            <article style="background-color: rgb(222, 58, 255); margin-top: 15px; margin-left: 45px; margin-right: 45px;">
+                <h2>Блок 1</h2>
+                <ul>
+                    <li>Оригинальная трилогия</li>
+                    <li>Трилогия приквелов</li>
+                    <li>Трилогия сиквелов</li>
+                </ul>
+            </article>
+
+            <article style="background-color: rgb(222, 58, 255); margin-top: 15px; margin-left: 45px; margin-right: 45px;">
+                <h2>Блок 2</h2>
+                <ol>
+                    <li>Эпизод IV — Новая надежда</li>
+                    <li>Эпизод V — Империя наносит ответный удар</li>
+                    <li>Эпизод VI — Возвращение джедая</li>
+                </ol>
+            </article>
+        </main>
+
+        <footer style="text-align: center; background-color: #32CD32;">
+            <h1>Footer aka Подвал</h1>
+        </footer>
+
+    </body>
 </html>
