--- a/03-lection1/01-button/index.html
+++ b/03-lection1/01-button/index.html
@@ -2,6 +2,7 @@
 <!-- Страница с кнопкой -->
 <html lang="ru">
     <head>
+        <link rel="stylesheet" href="./normalize.css"
         <link rel="stylesheet" href="../../assets/css/main.css">
         <link rel="stylesheet" href="./button.css">
     </head>
