add button solution
UPD: убрал фиксированный размер кнопок, добавил паддинги. Постарался
переписать все так, чтобы было более в духе БЭМ (в целом, текста стало
меньше, так что возможно я даже в нужную сторону двигаюсь). Текст на
кнопках засунул в <p> из тех же соображений: чтобы можно было два раза
описать стиль, вместо одного. Вроде бы всё...

--- a/03-lection1/01-button/index.html
+++ b/03-lection1/01-button/index.html
@@ -6,6 +6,13 @@
         <link rel="stylesheet" href="./button.css">
     </head>
     <body>
-
+        <div class="page">
+            <button class="button_primary"><p class="button__text-main">Primary</p></button>
+            <button disabled class="button_primary"><p class="button__text-main">Primary</p></button>
+            <button class="button_secondary"><p class="button__text-main">Secondary</p></button>
+            <button disabled class="button_secondary"><p class="button__text-main">Secondary</p></button>
+            <button class="button_alternate"><p class="button__text-alternate">Alternate</p></button>
+            <button disabled class="button_alternate"><p class="button__text-alternate">Alternate</p></button>
+        </div>
     </body>
 </html>
