add button solution

--- a/03-lection1/01-button/index.html
+++ b/03-lection1/01-button/index.html
@@ -6,6 +6,13 @@
         <link rel="stylesheet" href="./button.css">
     </head>
     <body>
-
+        <div class="page">
+            <button class="button-primary-default">Primary</button>
+            <button class="button-primary-disabled">Primary</button>
+            <button class="button-secondary-default">Secondary</button>
+            <button class="button-secondary-disabled">Secondary</button>
+            <button class="button-alternate-default">Alternate</button>
+            <button class="button-alternate-disabled">Alternate</button>
+        </div>
     </body>
 </html>
