accordion task solution

--- a/03-lection1/02-accordion/index.html
+++ b/03-lection1/02-accordion/index.html
@@ -6,11 +6,27 @@
         <link rel="stylesheet" href="./accordion.css">
     </head>
     <body>
-        <details>
-            <summary>
-                Accordion item
+        <details open class="accordion">
+            <summary class="accordion__title">
+                Accordion item 1
             </summary>
-            <p>
+            <p class="accordion__content">
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+            </p>
+        </details>
+        <details class="accordion">
+            <summary class="accordion__title">
+                Accordion item 2
+            </summary>
+            <p class="accordion__content">
+                Hidden content
+            </p>
+        </details>
+        <details class="accordion">
+            <summary class="accordion__title">
+                Accordion item 3
+            </summary>
+            <p class="accordion__content">
                 Hidden content
             </p>
         </details>
