block button added, text-main & text-alternate removed

--- a/03-lection1/01-button/index.html
+++ b/03-lection1/01-button/index.html
@@ -7,12 +7,12 @@
     </head>
     <body>
         <div class="page">
-            <button class="button_primary"><p class="button__text-main">Primary</p></button>
-            <button disabled class="button_primary"><p class="button__text-main">Primary</p></button>
-            <button class="button_secondary"><p class="button__text-main">Secondary</p></button>
-            <button disabled class="button_secondary"><p class="button__text-main">Secondary</p></button>
-            <button class="button_alternate"><p class="button__text-alternate">Alternate</p></button>
-            <button disabled class="button_alternate"><p class="button__text-alternate">Alternate</p></button>
+            <button class="button button_primary">Primary</button>
+            <button disabled class="button button_primary">Primary</button>
+            <button class="button button_secondary">Secondary</button>
+            <button disabled class="button button_secondary">Secondary</button>
+            <button class="button button_alternate">Alternate</button>
+            <button disabled class="button button_alternate">Alternate</button>
         </div>
     </body>
 </html>
