--- a/03-lection1/02-accordion/index.html
+++ b/03-lection1/02-accordion/index.html
@@ -4,31 +4,34 @@
     <head>
         <link rel="stylesheet" href="../../assets/css/main.css">
         <link rel="stylesheet" href="./accordion.css">
+        <link rel="stylesheet" href="../../assets/fonts/fonts.css">
     </head>
     <body>
-        <details open class="accordion">
-            <summary class="accordion__title">
-                Accordion item 1
-            </summary>
-            <p class="accordion__content">
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
-            </p>
-        </details>
-        <details class="accordion">
-            <summary class="accordion__title">
-                Accordion item 2
-            </summary>
-            <p class="accordion__content">
-                Hidden content
-            </p>
-        </details>
-        <details class="accordion">
-            <summary class="accordion__title">
-                Accordion item 3
-            </summary>
-            <p class="accordion__content">
-                Hidden content
-            </p>
-        </details>
+        <div class="accordion">
+            <details open class="accordion__item">
+                <summary class="accordion__title">
+                    Accordion item 1
+                </summary>
+                <p class="accordion__content">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+            </details>
+            <details class="accordion__item">
+                <summary class="accordion__title">
+                    Accordion item 2
+                </summary>
+                <p class="accordion__content">
+                    Hidden content
+                </p>
+            </details>
+            <details class="accordion__item">
+                <summary class="accordion__title">
+                    Accordion item 3
+                </summary>
+                <p class="accordion__content">
+                    Hidden content
+                </p>
+            </details>
+        </div>
     </body>
 </html>
