after review changes

--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -12,14 +12,14 @@
                     <circle cx="32" cy="32" r="32" fill="#DDE2E5"/>
                 </svg>
                 <div class="skeleton__top">
-                    <div class="skeleton__elements"></div>
-                    <div class="skeleton__elements"></div>
+                    <div class="skeleton__element skeleton__element_small"></div>
+                    <div class="skeleton__element skeleton__element_medium"></div>
                 </div>
             </div>
 
             <div class="skeleton__bottom">
-                <div class="skeleton__elements"></div>
-                <div class="skeleton__elements"></div>
+                <div class="skeleton__element skeleton__element_large"></div>
+                <div class="skeleton__element skeleton__element_large"></div>
             </div>
 
         </div>
