--- a/05-lection3/03-calendar/index.html
+++ b/05-lection3/03-calendar/index.html
@@ -7,6 +7,54 @@
         <title>Calendar</title>
     </head>
     <body>
-
+        <div class="calendar">
+            <div class="calendar__title">October 2019</div>
+            <div class="calendar__wrapper">
+              <div class="calendar__inner">
+                <span class="calendar__day calendar__day_day-of-week">Mon</span>
+                <span class="calendar__day calendar__day_day-of-week">Tue</span>
+                <span class="calendar__day calendar__day_day-of-week">Wed</span>
+                <span class="calendar__day calendar__day_day-of-week">Thu</span>
+                <span class="calendar__day calendar__day_day-of-week">Fri</span>
+                <span class="calendar__day calendar__day_day-of-week">Sat</span>
+                <span class="calendar__day calendar__day_day-of-week">Sun</span>
+                <span class="calendar__day"></span>
+                <span class="calendar__day"></span>
+                <span class="calendar__day"></span>
+                <span class="calendar__day"></span>
+                <span class="calendar__day">1</span>
+                <span class="calendar__day">2</span>
+                <span class="calendar__day">3</span>
+                <span class="calendar__day">4</span>
+                <span class="calendar__day">5</span>
+                <span class="calendar__day">6</span>
+                <span class="calendar__day">7</span>
+                <span class="calendar__day">8</span>
+                <span class="calendar__day">9</span>
+                <span class="calendar__day">10</span>
+                <span class="calendar__day">11</span>
+                <span class="calendar__day">12</span>
+                <span class="calendar__day">13</span>
+                <span class="calendar__day">14</span>
+                <span class="calendar__day">15</span>
+                <span class="calendar__day">16</span>
+                <span class="calendar__day">17</span>
+                <span class="calendar__day calendar__day_breakpoint">18</span>
+                <span class="calendar__day calendar__day_period">19</span>
+                <span class="calendar__day calendar__day_period">20</span>
+                <span class="calendar__day calendar__day_period">21</span>
+                <span class="calendar__day calendar__day_period">22</span>
+                <span class="calendar__day calendar__day_breakpoint">23</span>
+                <span class="calendar__day">24</span>
+                <span class="calendar__day">25</span>
+                <span class="calendar__day">26</span>
+                <span class="calendar__day">27</span>
+                <span class="calendar__day">28</span>
+                <span class="calendar__day">29</span>
+                <span class="calendar__day">30</span>
+                <span class="calendar__day">31</span>
+              </div>
+            </div>
+          </div>
     </body>
 </html>
