corrected histogram solution

--- a/04-lection2/01-histogram/index.html
+++ b/04-lection2/01-histogram/index.html
@@ -6,43 +6,43 @@
         <link rel="stylesheet" href="./histogram.css">
     </head>
     <body>
-        <div class="histogram-card">
-            <div class="histogram-card__text">
-                 <div class="histogram-card__element histogram-card__element_opacity-text">Total orders</div>
-                 <div class="histogram-card__element histogram-card__element_auxillary-text">View All</div>
+        <div class="histogram">
+            <div class="histogram__text">
+                 <div class="histogram__opacity-text">Total orders</div>
+                 <a class="histogram__auxillary-text" href="">View All</a>
             </div>
-            <div class="histogram-card__element histogram__number">50254</div>
-            <div class="histogram-card__chart">
-                    <div class="histogram-card__chart__element chart__element_large"></div>
-                    <div class="histogram-card__chart__element"></div>
-                    <div class="histogram-card__chart__element chart__element_medium"></div>
-                    <div class="histogram-card__chart__element chart__element_medium"></div>
-                    <div class="histogram-card__chart__element chart__element_small"></div>
-                    <div class="histogram-card__chart__element"></div>
-                    <div class="histogram-card__chart__element chart__element_large"></div>
-                    <div class="histogram-card__chart__element"></div>
-                    <div class="histogram-card__chart__element chart__element_large"></div>
-                    <div class="histogram-card__chart__element"></div>
-                    <div class="histogram-card__chart__element chart__element_medium"></div>
-                    <div class="histogram-card__chart__element"></div>
-                    <div class="histogram-card__chart__element chart__element_x-small"></div>
-                    <div class="histogram-card__chart__element"></div>
-                    <div class="histogram-card__chart__element chart__element_medium"></div>
-                    <div class="histogram-card__chart__element"></div>
-                    <div class="histogram-card__chart__element chart__element_small"></div>
-                    <div class="histogram-card__chart__element"></div>
-                    <div class="histogram-card__chart__element chart__element_large"></div>
-                    <div class="histogram-card__chart__element chart__element_small"></div>
-                    <div class="histogram-card__chart__element chart__element_medium"></div>
-                    <div class="histogram-card__chart__element"></div>
-                    <div class="histogram-card__chart__element chart__element_large"></div>
-                    <div class="histogram-card__chart__element"></div>
-                    <div class="histogram-card__chart__element"></div>
-                    <div class="histogram-card__chart__element chart__element_large"></div>
-                    <div class="histogram-card__chart__element"></div>
-                    <div class="histogram-card__chart__element chart__element_x-small"></div>
-                    <div class="histogram-card__chart__element chart__element_medium"></div>
-                    <div class="histogram-card__chart__element"></div>
+            <div class="histogram__element histogram__number">50254</div>
+            <div class="histogram__chart">
+                    <div class="histogram__chart-element chart__element_full-height"></div>
+                    <div class="histogram__chart-element"></div>
+                    <div class="histogram__chart-element chart__element_medium-height"></div>
+                    <div class="histogram__chart-element chart__element_medium-height"></div>
+                    <div class="histogram__chart-element chart__element_small-height"></div>
+                    <div class="histogram__chart-element"></div>
+                    <div class="histogram__chart-element chart__element_full-height"></div>
+                    <div class="histogram__chart-element"></div>
+                    <div class="histogram__chart-element chart__element_full-height"></div>
+                    <div class="histogram__chart-element"></div>
+                    <div class="histogram__chart-element chart__element_medium-height"></div>
+                    <div class="histogram__chart-element"></div>
+                    <div class="histogram__chart-element chart__element_x-small-height"></div>
+                    <div class="histogram__chart-element"></div>
+                    <div class="histogram__chart-element chart__element_medium-height"></div>
+                    <div class="histogram__chart-element"></div>
+                    <div class="histogram__chart-element chart__element_small-height"></div>
+                    <div class="histogram__chart-element"></div>
+                    <div class="histogram__chart-element chart__element_full-height"></div>
+                    <div class="histogram__chart-element chart__element_small-height"></div>
+                    <div class="histogram__chart-element chart__element_medium-height"></div>
+                    <div class="histogram__chart-element"></div>
+                    <div class="histogram__chart-element chart__element_full-height"></div>
+                    <div class="histogram__chart-element"></div>
+                    <div class="histogram__chart-element"></div>
+                    <div class="histogram__chart-element chart__element_full-height"></div>
+                    <div class="histogram__chart-element"></div>
+                    <div class="histogram__chart-element chart__element_x-small-height"></div>
+                    <div class="histogram__chart-element chart__element_medium-height"></div>
+                    <div class="histogram__chart-element"></div>
             </div>
         </div>
     </body>
