--- a/04-lection2/01-histogram/index.html
+++ b/04-lection2/01-histogram/index.html
@@ -11,38 +11,38 @@
                  <div class="histogram__opacity-text">Total orders</div>
                  <a class="histogram__auxillary-text" href="">View All</a>
             </div>
-            <div class="histogram__element histogram__number">50254</div>
+            <div class="histogram__number">50254</div>
             <div class="histogram__chart">
                     <div class="histogram__chart-element chart__element_full-height"></div>
-                    <div class="histogram__chart-element"></div>
-                    <div class="histogram__chart-element chart__element_medium-height"></div>
-                    <div class="histogram__chart-element chart__element_medium-height"></div>
-                    <div class="histogram__chart-element chart__element_small-height"></div>
-                    <div class="histogram__chart-element"></div>
-                    <div class="histogram__chart-element chart__element_full-height"></div>
-                    <div class="histogram__chart-element"></div>
-                    <div class="histogram__chart-element chart__element_full-height"></div>
-                    <div class="histogram__chart-element"></div>
-                    <div class="histogram__chart-element chart__element_medium-height"></div>
-                    <div class="histogram__chart-element"></div>
-                    <div class="histogram__chart-element chart__element_x-small-height"></div>
-                    <div class="histogram__chart-element"></div>
-                    <div class="histogram__chart-element chart__element_medium-height"></div>
-                    <div class="histogram__chart-element"></div>
-                    <div class="histogram__chart-element chart__element_small-height"></div>
-                    <div class="histogram__chart-element"></div>
-                    <div class="histogram__chart-element chart__element_full-height"></div>
-                    <div class="histogram__chart-element chart__element_small-height"></div>
-                    <div class="histogram__chart-element chart__element_medium-height"></div>
-                    <div class="histogram__chart-element"></div>
-                    <div class="histogram__chart-element chart__element_full-height"></div>
-                    <div class="histogram__chart-element"></div>
-                    <div class="histogram__chart-element"></div>
-                    <div class="histogram__chart-element chart__element_full-height"></div>
-                    <div class="histogram__chart-element"></div>
                     <div class="histogram__chart-element chart__element_x-small-height"></div>
                     <div class="histogram__chart-element chart__element_medium-height"></div>
-                    <div class="histogram__chart-element"></div>
+                    <div class="histogram__chart-element chart__element_medium-height"></div>
+                    <div class="histogram__chart-element chart__element_small-height"></div>
+                    <div class="histogram__chart-element chart__element_x-small-height"></div>
+                    <div class="histogram__chart-element chart__element_full-height"></div>
+                    <div class="histogram__chart-element chart__element_medium-height"></div>
+                    <div class="histogram__chart-element chart__element_full-height"></div>
+                    <div class="histogram__chart-element chart__element_medium-height"></div>
+                    <div class="histogram__chart-element chart__element_medium-height"></div>
+                    <div class="histogram__chart-element chart__element_full-height"></div>
+                    <div class="histogram__chart-element chart__element_x-small-height"></div>
+                    <div class="histogram__chart-element chart__element_full-height"></div>
+                    <div class="histogram__chart-element chart__element_medium-height"></div>
+                    <div class="histogram__chart-element chart__element_full-height"></div>
+                    <div class="histogram__chart-element chart__element_small-height"></div>
+                    <div class="histogram__chart-element chart__element_x-small-height"></div>
+                    <div class="histogram__chart-element chart__element_full-height"></div>
+                    <div class="histogram__chart-element chart__element_small-height"></div>
+                    <div class="histogram__chart-element chart__element_medium-height"></div>
+                    <div class="histogram__chart-element chart__element_x-small-height"></div>
+                    <div class="histogram__chart-element chart__element_full-height"></div>
+                    <div class="histogram__chart-element chart__element_x-small-height"></div>
+                    <div class="histogram__chart-element chart__element_medium-height"></div>
+                    <div class="histogram__chart-element chart__element_full-height"></div>
+                    <div class="histogram__chart-element chart__element_medium-height"></div>
+                    <div class="histogram__chart-element chart__element_x-small-height"></div>
+                    <div class="histogram__chart-element chart__element_medium-height"></div>
+                    <div class="histogram__chart-element chart__element_small-height"></div>
             </div>
         </div>
     </body>
